gl31-master/src/test/deca/context/valid/sansobjet/affect_boolean_boolean.deca
// Description:
//    Affectation et typage : associe un boolean a un boolean
//
// Resultats:
//    Ligne 15: Affectation de types compatibles
//
// Historique:
//    cree le 08/01/2021

{
   boolean a;
   boolean b;

   // Doit etre accepte.
   a = b;
}
